# OpenGLEngine

./: .gitignore  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: GL.cpp  GL.h  camera.cpp  camera.h  cubeMap.cpp  cubeMap.h  defaultPass.cpp  defaultPass.h  frameBuffer.cpp  frameBuffer.h  gammaCorrectionPass.cpp  gammaCorrectionPass.h  indexBuffer.cpp  indexBuffer.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object3d.cpp  object3d.h  pass.cpp  pass.h  passList.cpp  passList.h  postFXPass.cpp  postFXPass.h  refractMesh.cpp  refractMesh.h  refractModel.cpp  refractModel.h  refractPass.cpp  refractPass.h  renderBuffer.cpp  renderBuffer.h  renderContext.h  renderer.cpp  renderer.h  (+16 more)
src/data/: backpack.mtl  cube.mtl  grass.mtl  window.mtl
src/data/cassini/: Cassini_66.mtl
src/data/curiosity/: curiosity.mtl
src/data/ingenuity/: Ingenuity.mtl
src/data/perseverance/: perseverance.mtl
src/shaders/: default.frag  default.vert  gammaCorrectionPostFX.frag  postFX.frag  refract.frag  refract.vert
